<resources>
    <string name="app_name">Animapps</string>
    <string name="brand_names">Brand Name</string>
    <string name="details">Brand Details</string>
    <string name="list">List</string>
    <string name="about">About</string>
    <string name="nama_saya">Ario Waskita</string>
    <string name="my_email">ariowaskita@hotmail.com</string>
    <string name="brand_name1">Aston Martin</string>
    <string name="brand_name2">Audi AG</string>
    <string name="brand_name3">Bentley Motors Limited</string>
    <string name="brand_name4">Bayerische Motoren Werke AG</string>
    <string name="brand_name5">Bugatti Automobiles S.A.S.</string>
    <string name="brand_name6">Dodge</string>
    <string name="brand_name7">Ferrari</string>
    <string name="brand_name8">Cadillac</string>
    <string name="brand_name9">Jaguar</string>
    <string name="brand_name10">Jeep</string>
    <string name="bnamet">Brand Name :</string>
    <string name="fnamet">Founders :</string>
    <string name="fname1">Lionel Martin, Robert Bamford</string>
    <string name="fname2">August Horch</string>
    <string name="fname3">H. M. Bentley, W. O. Bentley</string>
    <string name="fname4">Camillo Castiglioni, Franz Josef Popp, Karl Rapp</string>
    <string name="fname5">Ettore Bugatti</string>
    <string name="fname6">John Francis Dodge, Horace Elgin Dodge</string>
    <string name="fname7">Enzo Ferrari</string>
    <string name="fname8">William Murphy, Lemuel Bowen, Henry M. Leland</string>
    <string name="fname9">William Lyons</string>
    <string name="fname10">-</string>
    <string name="hnamet">Headquarters :</string>
    <string name="hname1">Gaydon, United Kingdom</string>
    <string name="hname2">Ingolstadt, Germany</string>
    <string name="hname3">Crewe, England, United Kingdom</string>
    <string name="hname4">Munich, Germany</string>
    <string name="hname5">Molsheim, Alsace, France</string>
    <string name="hname6">Auburn Hills, Michigan, U.S.</string>
    <string name="hname7">Amsterdam, Netherlands (de jure) | Maranello, Emilia-Romagna, Italy (de facto)</string>
    <string name="hname8">Warren, Michigan, United States</string>
    <string name="hname9">Whitley, England</string>
    <string name="hname10">Toledo, Ohio, U.S.</string>
    <string name="dinfot">Detail Information :</string>
    <string name="dinfo1">Aston Martin Lagonda Global Holdings plc is a British independent manufacturer of luxury sports cars and grand tourers. It was founded in 1913 by Lionel Martin and Robert Bamford. Steered from 1947 by David Brown, it became associated with expensive grand touring cars in the 1950s and 1960s, and with the fictional character James Bond following his use of a DB5 model in the 1964 film Goldfinger. Their sports cars are regarded as a British cultural icon.</string>
    <string name="dinfo2">Audi AG is a German automobile manufacturer that designs, engineers, produces, markets and distributes luxury vehicles. Audi is a member of the Volkswagen Group and has its roots at Ingolstadt, Bavaria, Germany. Audi-branded vehicles are produced in nine production facilities worldwide.</string>
    <string name="dinfo3">Bentley Motors Limited is a British manufacturer and marketer of luxury cars and SUVs—and a subsidiary of the Volkswagen Group since 1998. Headquartered in Crewe, England, the company was founded as Bentley Motors Limited by W. O. Bentley in 1919 in Cricklewood, North London—and became widely known for winning the 24 Hours of Le Mans in 1924, 1927, 1928, 1929 and 1930.</string>
    <string name="dinfo4">Bayerische Motoren Werke AG, commonly referred to as BMW, is a German multinational company which produces automobiles and motorcycles. The company was founded in 1916 as a manufacturer of aircraft engines, which it produced from 1917 until 1918 and again from 1933 to 1945. Automobiles are marketed under the brands BMW, Mini and Rolls-Royce, and motorcycles are marketed under the brand BMW Motorrad. In 2015, BMW was the world\'s twelfth-largest producer of motor vehicles, with 2,279,503 vehicles produced.</string>
    <string name="dinfo5">Automobiles Ettore Bugatti was a French car manufacturer of high-performance automobiles, founded in 1909 in the then-German city of Molsheim, Alsace by the Italian-born industrial designer Ettore Bugatti. The cars were known for their design beauty and for their many race victories. Famous Bugattis include the Type 35 Grand Prix cars, the Type 41 "Royale", the Type 57 "Atlantic" and the Type 55 sports car.</string>
    <string name="dinfo6">Dodge is an American brand of automobile manufactured by FCA US LLC (formerly known as Fiat Chrysler Group LLC), based in Auburn Hills, Michigan. Dodge vehicles currently include performance cars, though for much of its existence Dodge was Chryslers mid-priced brand above Plymouth. Founded as the Dodge Brothers Company machine shop by brothers Horace Elgin Dodge and John Francis Dodge in the early 1900s</string>
    <string name="dinfo7">Ferrari is an Italian luxury sports car manufacturer based in Maranello. Founded by Enzo Ferrari in 1939 out of Alfa Romeos race division as Auto Avio Costruzioni, the company built its first car in 1940. However, the companys inception as an auto manufacturer is usually recognized in 1947, when the first Ferrari-badged car was completed.</string>
    <string name="dinfo8">Cadillac is a division of the American automobile manufacturer General Motors (GM) that designs and builds luxury vehicles. Its major markets are the United States, Canada, and China. Cadillac vehicles are distributed in 34 additional markets worldwide. Cadillac automobiles are at the top of the luxury field within the United States. In 2017, Cadillacs U.S. sales were 156,440 vehicles and its global sales were the second highest in the brands history at 356,467 vehicles.</string>
    <string name="dinfo9">Jaguar is the luxury vehicle brand of Jaguar Land Rover, a British multinational car manufacturer with its headquarters in Whitley, Coventry, England. Jaguar Cars was the company that was responsible for the production of Jaguar cars until its operations were fully merged with those of Land Rover to form Jaguar Land Rover on 1 January 2013.</string>
    <string name="dinfo10">Jeep is a brand of American automobile and division of FCA US LLC (formerly Chrysler Group, LLC), a wholly owned subsidiary of the Italian-American corporation Fiat Chrysler Automobiles. Jeep has been a part of Chrysler since 1987, when Chrysler acquired the Jeep brand, along with remaining assets, from its previous owner American Motors Corporation (AMC).</string>
    <string name="sumber">Sumber : en.wikipedia.org</string>
</resources>
